# voxa-node

./: .gitignore  Cargo.toml  README.md
src/: main.rs  server.rs  types.rs
src/requests/: auth.rs  message.rs  mod.rs
src/utils/: client.rs  database.rs  mod.rs
