[package]
name = "voxa-node"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
anyhow = "1.0.100"
base64 = "0.22.1"
sha1 = "0.10.6"
once_cell = "1.21.3"
chrono = "0.4.42"
ureq = "3.1.2"
rusqlite = "0.37.0"
rand = "0.9.2"
